src/objects/s4g_currencies__Currency_Updater_Job__c.object
<CustomObject>
    <description>Object which allow to follow every currency updater job.</description>
    <fields>
        <fullName>s4g_currencies__Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Job_Id__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Job_Launched_Id__c</fullName>
        <label>Job_Launched_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Currency Updater Job</label>
    <nameField>
        <label>Currency Updater Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Updater Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>